--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
     "      filters=32,\n",
     "      kernel_size=[5, 5],\n",
     "      padding=\"valid\",\n",
-    "      activation=tf.nn.relu)\n",
+    "      activation=tf.nn.relu, name=\"conv1\")\n",
     "\n",
     "  conv2 = tf.layers.conv2d(conv1, filters=64, \n",
     "                       kernel_size=3,\n",
@@ -44,33 +44,21 @@
     "  fullyconn2 = tf.layers.dense(fullyconn1, 64,\n",
     "                           activation=tf.nn.relu, name=\"fc2\")\n",
     "  logits = tf.layers.dense(fullyconn2, 10, name=\"output\")\n",
-    "  return logits"
+    "  return conv2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ankurkothari/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n",
-      "/Users/ankurkothari/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.datasets import cifar10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -86,40 +74,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 47,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ADL/cifar_model\n",
-      "Model restored.\n",
-      "[<tf.Variable 'conv2d/kernel:0' shape=(5, 5, 3, 32) dtype=float32_ref>, <tf.Variable 'conv2d/bias:0' shape=(32,) dtype=float32_ref>, <tf.Variable 'conv2/kernel:0' shape=(3, 3, 32, 64) dtype=float32_ref>, <tf.Variable 'conv2/bias:0' shape=(64,) dtype=float32_ref>, <tf.Variable 'conv4/kernel:0' shape=(4, 4, 64, 128) dtype=float32_ref>, <tf.Variable 'conv4/bias:0' shape=(128,) dtype=float32_ref>, <tf.Variable 'fc1/kernel:0' shape=(128, 128) dtype=float32_ref>, <tf.Variable 'fc1/bias:0' shape=(128,) dtype=float32_ref>, <tf.Variable 'fc2/kernel:0' shape=(128, 64) dtype=float32_ref>, <tf.Variable 'fc2/bias:0' shape=(64,) dtype=float32_ref>, <tf.Variable 'output/kernel:0' shape=(64, 10) dtype=float32_ref>, <tf.Variable 'output/bias:0' shape=(10,) dtype=float32_ref>, <tf.Variable 'beta1_power:0' shape=() dtype=float32_ref>, <tf.Variable 'beta2_power:0' shape=() dtype=float32_ref>, <tf.Variable 'conv2d/kernel/Adam:0' shape=(5, 5, 3, 32) dtype=float32_ref>, <tf.Variable 'conv2d/kernel/Adam_1:0' shape=(5, 5, 3, 32) dtype=float32_ref>, <tf.Variable 'conv2d/bias/Adam:0' shape=(32,) dtype=float32_ref>, <tf.Variable 'conv2d/bias/Adam_1:0' shape=(32,) dtype=float32_ref>, <tf.Variable 'conv2/kernel/Adam:0' shape=(3, 3, 32, 64) dtype=float32_ref>, <tf.Variable 'conv2/kernel/Adam_1:0' shape=(3, 3, 32, 64) dtype=float32_ref>, <tf.Variable 'conv2/bias/Adam:0' shape=(64,) dtype=float32_ref>, <tf.Variable 'conv2/bias/Adam_1:0' shape=(64,) dtype=float32_ref>, <tf.Variable 'conv4/kernel/Adam:0' shape=(4, 4, 64, 128) dtype=float32_ref>, <tf.Variable 'conv4/kernel/Adam_1:0' shape=(4, 4, 64, 128) dtype=float32_ref>, <tf.Variable 'conv4/bias/Adam:0' shape=(128,) dtype=float32_ref>, <tf.Variable 'conv4/bias/Adam_1:0' shape=(128,) dtype=float32_ref>, <tf.Variable 'fc1/kernel/Adam:0' shape=(128, 128) dtype=float32_ref>, <tf.Variable 'fc1/kernel/Adam_1:0' shape=(128, 128) dtype=float32_ref>, <tf.Variable 'fc1/bias/Adam:0' shape=(128,) dtype=float32_ref>, <tf.Variable 'fc1/bias/Adam_1:0' shape=(128,) dtype=float32_ref>, <tf.Variable 'fc2/kernel/Adam:0' shape=(128, 64) dtype=float32_ref>, <tf.Variable 'fc2/kernel/Adam_1:0' shape=(128, 64) dtype=float32_ref>, <tf.Variable 'fc2/bias/Adam:0' shape=(64,) dtype=float32_ref>, <tf.Variable 'fc2/bias/Adam_1:0' shape=(64,) dtype=float32_ref>, <tf.Variable 'output/kernel/Adam:0' shape=(64, 10) dtype=float32_ref>, <tf.Variable 'output/kernel/Adam_1:0' shape=(64, 10) dtype=float32_ref>, <tf.Variable 'output/bias/Adam:0' shape=(10,) dtype=float32_ref>, <tf.Variable 'output/bias/Adam_1:0' shape=(10,) dtype=float32_ref>]\n"
+      "INFO:tensorflow:Restoring parameters from ADL/cifar_model\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "\"The name 'output' refers to an Operation not in the graph.\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-47-2c3ed617124a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0msaver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrestore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"ADL/cifar_model\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_operation_by_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'output'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Model restored.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36mget_operation_by_name\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   3490\u001b[0m       raise TypeError(\"Operation names are strings (or similar), not %s.\" %\n\u001b[1;32m   3491\u001b[0m                       type(name).__name__)\n\u001b[0;32m-> 3492\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_graph_element\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_tensor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_operation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3493\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3494\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_get_operation_by_name_unsafe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36mas_graph_element\u001b[0;34m(self, obj, allow_tensor, allow_operation)\u001b[0m\n\u001b[1;32m   3362\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3363\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_lock\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3364\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_as_graph_element_locked\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_tensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_operation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3365\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3366\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_as_graph_element_locked\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_tensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_operation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36m_as_graph_element_locked\u001b[0;34m(self, obj, allow_tensor, allow_operation)\u001b[0m\n\u001b[1;32m   3422\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_nodes_by_name\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3423\u001b[0m           raise KeyError(\"The name %s refers to an Operation not in the \"\n\u001b[0;32m-> 3424\u001b[0;31m                          \"graph.\" % repr(name))\n\u001b[0m\u001b[1;32m   3425\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_nodes_by_name\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3426\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"The name 'output' refers to an Operation not in the graph.\""
      ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
-    "from tensorflow.python.tools import inspect_checkpoint as chkp\n",
     "\n",
     "tf.reset_default_graph()\n",
     "with tf.Session() as sess:\n",
     "    # Restore variables from disk.\n",
-    "    x = tf.placeholder(\"float\", [50000, 32, 32, 3])\n",
+    "    x = tf.placeholder(\"float\", [None, 32, 32, 3])\n",
     "    \n",
     "    \n",
     "    \n",
     "    saver = tf.train.import_meta_graph('ADL/cifar_model.meta')\n",
-    "    saver.restore(sess,\"ADL/cifar_model\")\n",
-    "    print(\"Model restored.\")\n",
-    "    print(tf.global_variables())\n",
-    "    #for var in tf.train.list_variables(\"ADL/cifar_model\"):\n",
-    "     #   print(var)\n",
     "    \n",
-    "    # Check the values of the variables\n",
-    "    #prediction = sess.run(p, feed_dict = {x: features})\n",
-    "    #print(predicition)"
+    "    saver.restore(sess,\"ADL/cifar_model\")\n",
+    "    a = sess.graph.get_operation_by_name('output')\n",
+    "    print(sess.run(a))\n",
+    "    print(\"Model restored.\")\n",
+    "    tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES,\n",
+    "                               scope=\"conv1\")\n",
+    "    tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES,\n",
+    "                               scope=\"conv2\")\n",
+    "    output = tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES,\n",
+    "                               scope=\"output\")\n",
+    "    print(output)\n",
+    "    Z3 = forward_propagation(x)\n",
+    "    sess.run(Z3, feed_dict = {x: features[0:1]})\n",
+    "    predict_op = tf.argmax(Z3, 1)\n",
+    "    print(predict_op)\n",
+    "    print(len(p))"
    ]
   },
   {
