--- a/script1.ipynb
+++ b/script1.ipynb
@@ -433,7 +433,7 @@
     "\n",
     "            sess.run([training_op, loss], feed_dict={X: X_batch, y: y_batch})\n",
     "\n",
-    "        acc_train = accuracy.eval(feed_dict={X: X_batch, y: y_batch})\n",
+    "        acc_train = accuracy.eval(feed_dict={X: X_batch, y: y_batch, training: True})\n",
     "        acc_test = accuracy.eval(feed_dict={X: test_images, y: test_labels})\n",
     "        print(epoch, \"Train accuracy:\", acc_train, \"Test accuracy:\", acc_test)\n",
     "        print (\"Train Accuracy:\", round(acc_train, 2)*100,\"%\",  end=\"\\t\")\n",
